<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      tools:context=".MainActivity">

    <TextView
        android:id="@+id/sample_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_text_view"/>

    <EditText
        android:id="@+id/sample_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sample_text_view"
        android:text="@string/sample_edit_text"/>

    <CheckedTextView
        android:id="@+id/sample_checked_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sample_edit_text"
        android:checkMark="?android:listChoiceIndicatorSingle"
        android:checked="true"
        android:text="@string/sample_checked_text_view"/>

    <CheckBox
        android:id="@+id/sample_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sample_checked_text_view"
        android:checked="true"
        android:text="@string/sample_checkbox"/>

    <Button
        android:id="@+id/sample_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sample_checkbox"
        android:text="@string/sample_button"/>

    <Spinner
        android:id="@+id/sample_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sample_button"/>

    <Switch
        android:id="@+id/sample_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sample_spinner"
        android:text="@string/sample_switch"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sample_switch_compat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sample_switch"
        android:text="@string/sample_switch_compat"/>

    <ToggleButton
        android:id="@+id/sample_toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sample_switch_compat"
        android:textOff="@string/sample_toggle_button_off"
        android:textOn="@string/sample_toggle_button_on"/>

    <RadioButton
        android:id="@+id/sample_radio_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sample_toggle_button"
        android:text="@string/sample_radio_button"/>

    <TextView
        android:id="@+id/sample_auto_complete_text_view_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sample_radio_button"
        android:text="@string/sample_auto_complete_text_view"/>

    <AutoCompleteTextView
        android:id="@+id/sample_auto_complete_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sample_auto_complete_text_view_text"/>

    <TextView
        android:id="@+id/sample_progress_bar_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sample_auto_complete_text_view"
        android:text="@string/sample_progress_bar_text"/>

    <ProgressBar
        android:id="@+id/sample_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sample_progress_bar_text"/>

    <TextView
        android:id="@+id/sample_seekbar_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sample_progress_bar"
        android:text="@string/sample_seekbar_text"/>

    <SeekBar
        android:id="@+id/sample_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sample_seekbar_text"
        android:max="10"/>

    <TextView
        android:id="@+id/sample_rating_bar_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sample_seekbar"
        android:text="@string/sample_rating_bar_text"/>

    <RatingBar
        android:id="@+id/sample_rating_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sample_rating_bar_text"
        android:numStars="5"
        android:rating="3.5"
        android:stepSize="1.0"/>

    <TextView
        android:id="@+id/sample_image_view_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sample_rating_bar"
        android:text="@string/sample_image_view_text"/>

    <ImageView
        android:id="@+id/sample_image_view"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_below="@id/sample_image_view_text"
        android:src="@drawable/android"/>

    <TextView
        android:id="@+id/sample_image_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sample_image_view"
        android:text="@string/sample_image_button_text"/>

    <ImageButton
        android:id="@+id/sample_image_button"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:scaleType="fitCenter"
        android:layout_below="@id/sample_image_button_text"
        android:src="@drawable/another_android"/>
  </RelativeLayout>
</ScrollView>
